# space-logger

./: .gitignore  AGENTS.md  Cargo.toml  README.md  agent-gradlew
.codex/skills/mixin-injection-point-discovery/: SKILL.md
benches/: olap_bench.rs  query_perf_bench.rs
docs/: olap-lsm-architecture.md  segment-format-v2.md
docs/benchmarks/: perf-contract.md
docs/plan/: 2026-03-22-query-performance-10x-plan.md  mod-integration-next-steps.md
scripts/: check_bench_regression.sh  deploy_off_minecraft.sh
space-logger-mod/: LICENSE.txt  build.gradle.kts  gradle.properties
space-logger-mod/native-logger/: Cargo.toml
space-logger-mod/native-logger/src/: lib.rs
space-logger-mod/src/client/java/com/github/zly2006/sl/client/: SpaceLoggerClient.kt
space-logger-mod/src/client/resources/: space-logger-mod.client.mixins.json
space-logger-mod/src/main/java/com/github/zly2006/sl/: Consts.java  SpaceLogger.kt
space-logger-mod/src/main/java/com/github/zly2006/sl/access/: OperationCarrierAccess.java
space-logger-mod/src/main/java/com/github/zly2006/sl/command/: SpaceLoggerCommand.java
space-logger-mod/src/main/java/com/github/zly2006/sl/gametest/: SpaceLoggerGameTests.java
space-logger-mod/src/main/java/com/github/zly2006/sl/jni/: NativeSpaceLoggerBridge.java
space-logger-mod/src/main/java/com/github/zly2006/sl/logging/: SpaceLoggerEventSink.java
space-logger-mod/src/main/java/com/github/zly2006/sl/mixin/: BlockItemMixin.java  (+7 more)
space-logger-mod/src/main/resources/: fabric.mod.json  space-logger-mod.mixins.json
src/: lib.rs  main.rs
tests/: db_behavior.rs
(+2 files in other folders)
