[package]
name = "space-logger"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "olap_bench"
harness = false

[[bench]]
name = "query_perf_bench"
harness = false
